# Stress-test-router

./: .editorconfig  .env  .gitignore  404.html  README.md  config.yaml  index.html  pyproject.toml  requirements.txt  ssh-login.py  test.config.yaml
.github/workflows/: ci.yml  deploy-docs.yml
docs/: mkdocs.yml
docs/docs/: faq.md  index.md  layout.md  troubleshooting.md
faq/: index.html
features/: create_client.feature  environment.py  google_ping.feature  parallel_download.feature  stream.feature  stress_scenario.feature  video_streaming.feature
features/client/: create_client.feature
features/connectivity/: google_ping.feature
features/download/: parallel_download.feature
features/steps/: background_steps.py  client_creation_steps.py  client_steps.py  connectivity_steps.py  download_steps.py  google_ping.steps.py  google_ping_steps.py  resuable_steps.py  stress_scenario_steps.py  stress_steps.py  verify_ip_steps.py  video_steps.py
features/stress/: mixed_traffic_stress.feature
features/video/: video_streaming.feature
layout/: index.html
lib/: client_manager.py  download_manager.py  ping_manager.py  router_ssh_manager.py  stress_scenario_manager.py  video_manager.py
script/: ssh-login.py
search/: search_index.json
src/: client_manager.py  client_manager_ipv6.py  download_manager.py  network_manager.py  ping_manager.py  router_ssh_manager.py  stream_manager.py  stress_scenario_manager.py  video_manager.py
troubleshooting/: index.html
utils/: command_runner.py  config_loader.py  logger.py  pi_health_check.py
(+13 files in other folders)
