[tool.black]
line-length = 88
target-version = ["py311"]
skip-string-normalization = true

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
src_paths = ["src"]
known_first_party = ["stress_test_router"]  # replace with your package name under `src/`

[tool.flake8]
max-line-length = 88
# Ignore whitespace before ':' and line-break before binary operator
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    ".pytest_cache",
    ".mypy_cache",
]

[tool.mypy]
ignore_missing_imports = true
strict = false
# Consider enabling stricter checks (e.g. `strict = true`) once stubs are available.

[tool.coverage.run]
branch = true
source = ["src"]
omit = ["tests/*", "src/**/__init__.py"]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = true

[tool.coverage.html]
directory = "htmlcov"

# Optional PEP 517/518 build-system (uncomment if you want to build/distribute)
# [build-system]
# requires = ["setuptools>=61.0", "wheel"]
# build-backend = "setuptools.build_meta"
